@@ -1,0 +1,17 @@
+{
+    "type": "record",
+    "name": "Test",
+    "fields": [
+        {
+            "name": "kind",
+            "type": [
+                "null",
+                {
+                    "name": "Kind",
+                    "type": "enum",
+                    "symbols": ["X", "Y", "Z"]
+                }
+            ]
+        }
+    ]
+}
