@@ -1,0 +1,4 @@
+{"kind":null}
+{"kind":{"Kind":"X"}}
+{"kind":{"Kind":"Y"}}
+{"kind":{"Kind":"Z"}}
